WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
17173
HTML5 Canvas API requires us to ignore certain operations
https://bugs.webkit.org/show_bug.cgi?id=17173
Summary
HTML5 Canvas API requires us to ignore certain operations
Oliver Hunt
Reported
2008-02-04 04:46:01 PST
HTML5 has added a requirement that most canvas APIs should just ignore calls that pass infinity or nan arguments.
Attachments
adding new semantics
(23.40 KB, patch)
2008-02-04 04:58 PST
,
Oliver Hunt
no flags
Details
Formatted Diff
Diff
Implement new semantics
(30.82 KB, patch)
2008-04-27 20:30 PDT
,
Oliver Hunt
no flags
Details
Formatted Diff
Diff
Updated with more tests
(43.15 KB, patch)
2008-04-27 22:58 PDT
,
Oliver Hunt
mjs
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2008-02-04 04:58:55 PST
Created
attachment 18903
[details]
adding new semantics
Oliver Hunt
Comment 2
2008-04-27 20:30:22 PDT
Created
attachment 20859
[details]
Implement new semantics
Oliver Hunt
Comment 3
2008-04-27 22:58:32 PDT
Created
attachment 20861
[details]
Updated with more tests
Maciej Stachowiak
Comment 4
2008-04-27 23:00:54 PDT
Comment on
attachment 20861
[details]
Updated with more tests r=me
Oliver Hunt
Comment 5
2008-04-28 00:44:46 PDT
Committed
r32612
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug