Bug 17173: HTML5 Canvas API requires us to ignore certain operations <https://bugs.webkit.org/show_bug.cgi?id=17173>

Reviewed by Maciej

This fixes the semantics of a number of Canvas functions to match
the new HTML5 non-throwing semantics.

Test: fast/canvas/canvas-path-with-inf-nan-dimensions.html


Canonical link: https://commits.webkit.org/25890@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32612 268f45cc-cd09-0410-ab3c-d52691b4dbfc